<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_M1_Constants" Id="{e75b3be9-127e-46b4-b219-470b94c00321}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	// Encoder reference values in counts = nm
	// Enc Ref Vals from alignment 2020-5-27
	nYUP_ENC_REF : ULINT := 16171800;
	nYDWN_ENC_REF : ULINT := 14866900;
	nXUP_ENC_REF : ULINT := 24901730;
	nXDWN_ENC_REF : ULINT := 22921460;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>